--- a/topmodel.ipynb
+++ b/topmodel.ipynb
@@ -63,18 +63,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### present topics by relevant words\n",
+    "- from pyldavis, but footnote 2 there is incorrect\n",
+    "- https://nlp.stanford.edu/events/illvi2014/papers/sievert-illvi2014.pdf"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_top_words=15\n",
     "\n",
-    "# there is a mistake here for lbd != 1\n",
     "def show_topics(topic_term_mat, P_term=P_term, vocab=vocab, lbd=1):\n",
     "    # use weighting scheme from pyldavis\n",
     "    a = np.asarray(\n",
-    "        lbd * topic_term_mat + (1 - lbd) * np.multiply(topic_term_mat, 1 / P_term.reshape(1, -1)))\n",
+    "        lbd * np.log1p(topic_term_mat) + \\\n",
+    "        (1 - lbd) * np.log1p(np.multiply(topic_term_mat, 1 / P_term.reshape(1, -1)))\n",
+    "    )\n",
     "    top_words = lambda t: [vocab[i] for i in np.argsort(t)[:-num_top_words-1:-1]]\n",
     "    topic_words = [top_words(t) for t in a]\n",
     "    topic_list = [' '.join(t) for t in topic_words]\n",
@@ -117,38 +127,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 0: crazy reaction funny sick bother curious shit huh brain damn hmmm joke admit stupid thread\n",
-      " 1: windows microsoft dos desktop printer setup sys utilities utility thanx mouse font fonts characters drivers\n",
-      " 2: heaven sin christ lord eternal scripture god jesus faith bible doctrine mary christians christianity spirit\n",
-      " 3: dsl n3jxp chastity geb shameful cadre intellect skepticism surrender pitt gordon banks soon patients brain\n",
-      " 4: pitching scored playoffs playoff players fans baseball rangers nhl teams games game score hockey team\n",
-      " 5: ide boot drive drives floppy scsi controller meg motherboard external quadra isa brand disk internal\n",
-      " 6: advance thanks appreciate appreciated replies hello greatly mail wondering netters mailing responses reply anybody looking\n",
-      " 7: escrow encrypted phones clipper keys crypto nsa key chip cellular scheme algorithm encryption session des\n",
-      " 8: argic serdar armenia genocide turks armenians armenian turkey turkish muslim soviet bodies nazi region destroyed\n",
-      " 9: card diamond video vga slot cards isa monitor cache bus motherboard drivers ports monitors colors\n",
-      "10: sale shipping manuals offer condition brand stereo asking pair excellent selling price items sony super\n",
-      "11: car honda dealer cars rear miles engine owner paint mile driving wheel accident oil bike\n",
-      "12: window button manager root x11r5 terminal client corner application motif font focus specified display default\n",
-      "13: shuttle orbit nasa moon space solar launch station mission satellite rocket flight billion gov earth\n",
-      "14: indiana gmt zip virginia ohio corp apr uunet adams uucp edu com andrew keith scott\n",
-      "15: arabs israel israeli arab adam occupied peace jews civilians attacks jewish land soldiers resistance troops\n",
-      "16: zip files file convert formats directory format gif utility colors postscript bat bytes location header\n",
-      "17: motif widget use fonts voltage familiar code drawing documentation frame testing easier frequency practical signals\n",
-      "18: guns gun amendment crimes criminals violent batf firearms citizen laws criminal crime waco constitution weapon\n",
-      "19: luck good motorola bikes quality modem pitching miss intel recommend edition planning defensive impression ride\n"
+      " 0: think people time did really say way make want going right said things didn thing\n",
+      " 1: windows dos program using version running software files run problem thanks drivers screen driver microsoft\n",
+      " 2: god jesus bible christ faith christian christians believe church sin lord truth life does heaven\n",
+      " 3: pitt geb cadre dsl n3jxp chastity shameful intellect skepticism surrender gordon banks soon edu patients\n",
+      " 4: game team games season year players hockey play win league teams nhl player baseball toronto\n",
+      " 5: drive scsi drives hard disk ide controller floppy mac bus cable apple boot internal power\n",
+      " 6: thanks mail advance info looking email information address send interested does post list appreciated help\n",
+      " 7: key chip keys encryption clipper escrow algorithm bit nsa security public des chips secure encrypted\n",
+      " 8: armenian armenians turkish people armenia turkey turks genocide government soviet russian argic muslim greek serdar\n",
+      " 9: card video monitor bus cards drivers vga driver color ram does mode memory isa board\n",
+      "10: sale new offer price shipping condition asking sell excellent best interested email includes used original\n",
+      "11: car cars engine bike dealer miles driving driver honda rear oil insurance owner buy price\n",
+      "12: window problem server application manager display motif screen using widget x11r5 set running client button\n",
+      "13: space nasa shuttle launch orbit earth station program moon data gov satellite mission center research\n",
+      "14: edu com ftp internet pub university article mit apr email zip available version sun gov\n",
+      "15: israel israeli jews arab arabs jewish peace war state land adam attacks anti rights occupied\n",
+      "16: file files format directory image ftp gif zip convert read disk pub formats try copy\n",
+      "17: use does program code available motif using used widget graphics data image help software set\n",
+      "18: gun law guns government laws crime right state police federal control weapons rights firearms amendment\n",
+      "19: good year book speed luck better pretty quality mac years old bike modem memory books\n"
      ]
     }
    ],
    "source": [
-    "_ = show_topics(H1)"
+    "_ = show_topics(H1, lbd=1)"
    ]
   },
   {
